learn-kubernetes-minikube/exemples-network-policies/ex-07-allow-from-namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns
  labels:
    purpose: backend

---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
  labels:
    purpose: frontend

---
apiVersion: v1
kind: Namespace
metadata:
  name: attacker-ns
  labels:
    purpose: attacker
