learn-kubernetes-minikube/exemples-network-policies/ex-07-allow-from-namespace/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
  namespace: backend-ns
spec:
  containers:
    - name: backend
      image: nginx
