learn-kubernetes-minikube/exemples-network-policies/ex-07-allow-from-namespace/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend-ns
spec: 
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
