learn-kubernetes-minikube/exemples-network-policies/ex-07-allow-from-namespace/allow-frontend-ns-only-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-ns-only
  namespace: backend-ns
spec: 
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: 
            matchLabels:
              purpose: frontend
